--- a/NASDAQ/NASDAQ.css
+++ b/NASDAQ/NASDAQ.css
@@ -86,6 +86,7 @@ html {
 
 .technicals tr th {
     background-color: rgba(0, 159, 197, .7);
+    border-bottom: solid 2px black;
 }
 
 .stats {
@@ -136,7 +137,8 @@ html {
 
 .performance-text {
     position: absolute;
-    left: .7in;
+    width: 2in;
+    left: .35in;
     top: 5.4in;
     text-align: center;
     font-family: 'Old Standard TT', monospace;
@@ -185,12 +187,12 @@ html {
 
 .movers thead tr th {
     background-color: rgba(0, 159, 197, .7);
-    border-bottom: solid 3px black;
+    border-bottom: solid 2px black;
 }
 
 .movers tbody tr td:nth-child(even) {
     background-color: rgba(256, 256, 256, .6);
-    border-left: solid 3px black;
+    border-left: solid 2px black;
 }
 
 .movers tbody tr td:nth-child(odd) {
@@ -237,17 +239,17 @@ table {
 
 .movers thead tr th, .technicals thead tr th, #NASDAQ thead tr th {
     background-color: rgba(0, 159, 197, .7);
-    border-bottom: solid 3px black;
+    border-bottom: solid 2px black;
 }
 
 .technicals tbody tr td:nth-child(2), #NASDAQ tbody tr td:nth-child(2) {
     background-color: rgba(256, 256, 256, .6);
-    border-left: solid 3px black;
+    border-left: solid 2px black;
 }
 
 .movers tbody tr td:nth-child(odd), .technicals tbody tr td:nth-child(odd), #NASDAQ tbody tr td:nth-child(odd) {
     background-color: rgba(162, 214, 228, 0.815);
-    border-left: solid 3px black;
+    border-left: solid 2px black;
 }
 
 .movers tbody tr td:nth-child(1), .technicals tbody tr td:nth-child(1), #NASDAQ tbody tr td:nth-child(1) {
@@ -256,15 +258,15 @@ table {
 
 .performance tbody tr th, .faang tbody tr th {
     background-color: rgba(0, 159, 197, .7);
-    border-right: solid 3px black;
+    border-right: solid 2px black;
 }
 
 .faang tbody tr:nth-child(even) td, .performance tbody tr:nth-child(even) td {
     background-color: rgba(256, 256, 256, .6);
-    border-bottom: solid 3px black;
+    border-bottom: solid 2px black;
 }
 
 .faang tbody tr:nth-child(odd) td, .performance tbody tr:nth-child(odd) td {
     background-color: rgba(162, 214, 228, 0.815);
-    border-bottom: solid 3px black;
+    border-bottom: solid 2px black;
 }
