--- a/SP500/SP500.css
+++ b/SP500/SP500.css
@@ -14,7 +14,7 @@ html {
     margin: auto;
     border: none;
     box-sizing: border-box;
-    background: url('background2.jpg');
+    background: url('background.jpg');
     background-repeat: no-repeat;
     background-size: 8.5in 11in;
 }
@@ -62,6 +62,19 @@ html {
     top: .65in;
     left: .1in;
     border: solid 3px black;
+}
+
+#SP500 tbody tr td:nth-child(1) {
+    width: 80px;
+}
+
+#SP500 tbody tr td:nth-child(2) {
+    width: 100px;
+}
+
+
+#SP500 tbody tr td:nth-child(3) {
+    width: 70px;
 }
 
 .technicals {
@@ -130,28 +143,6 @@ html {
     font-size: 13px;
 }
 
-table tbody tr td:nth-child(odd) {
-    background: rgba(255, 255, 255, .5);
-}
-
-table tbody tr td:nth-child(even) {
-    background-color: rgba(200, 200, 200, .6);
-}
-
-table {
-    border-spacing: 0;
-}
-
-th {
-    background-color: rgba(237, 27, 46, .7);
-    text-align: center;
-    border-bottom: solid 3px black;
-}
-
-td {
-    font-family: 'Old Standard TT', sans-serif;
-}
-
 #active {
     bottom: 2.9in;
     left: .05in;
@@ -171,4 +162,34 @@ td {
     text-align: left;
     font-size: 13px;
     text-indent: 5px;
+}
+
+table tbody tr td:nth-child(odd) {
+    background: rgba(255, 255, 255, .5);
+}
+
+table tbody tr td:nth-child(even) {
+    background-color: rgba(200, 200, 200, .6);
+}
+
+table tbody tr td {
+    border-right: solid 2px black;
+}
+
+table tbody tr td:last-child {
+    border-right:none;
+}
+
+table {
+    border-spacing: 0;
+}
+
+th {
+    background-color: rgba(237, 27, 46, .7);
+    text-align: center;
+    border-bottom: solid 3px black;
+}
+
+td {
+    font-family: 'Old Standard TT', sans-serif;
 }
